--- a/src/app/view-record/view-record.component.html
+++ b/src/app/view-record/view-record.component.html
@@ -1,6 +1,6 @@
 <div class="option-grid">
   <div *ngFor="let row of attempt" class="option-row">
-    <div *ngFor="let cell of row" class="option-cell option-cell-{{ cell }}">
+    <div *ngFor="let cell of row" class="option-cell {{optionValueBg[cell]}}">
       <i [class]="optionValueIcon[cell]" aria-hidden="true"></i>
     </div>
   </div>
