--- a/src/app/insert-record/insert-record.component.html
+++ b/src/app/insert-record/insert-record.component.html
@@ -12,7 +12,7 @@
   <ng-template #showAttempt>
     <div>
       <label class="form-label"
-        >{{ game?.name }} detected with {{ attempt.length }} attempts</label
+        >{{ game?.name }} detected with {{ numberOfAttempts }} attempts</label
       >
       <app-view-record [attempt]="attempt"></app-view-record>
     </div>
