--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,11 @@
   max-width: 500px;
 }
 
+.daily-score {
+  width: 400px;
+  min-height: 250px;
+}
+
 .card {
   width: fit-content;
   width: 400px;
@@ -23,26 +28,75 @@
   width: 100%;
   position: absolute;
   z-index: 10;
-}
 
-.wrapper {
-  width: 200px;
-  height: 60px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
+  .wrapper {
+    width: 200px;
+    height: 60px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-.circle {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  border-radius: 50%;
-  background-color: #fff;
-  left: 15%;
-  transform-origin: 50%;
-  animation: circle 0.5s alternate infinite ease;
+  .circle {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #fff;
+    left: 15%;
+    transform-origin: 50%;
+    animation: circle 0.5s alternate infinite ease;
+  }
+
+  .circle:nth-child(2) {
+    left: 45%;
+    animation-delay: 0.2s;
+  }
+  .circle:nth-child(3) {
+    left: auto;
+    right: 15%;
+    animation-delay: 0.3s;
+  }
+  .shadow {
+    width: 20px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 62px;
+    transform-origin: 50%;
+    z-index: -1;
+    left: 15%;
+    filter: blur(1px);
+    animation: shadow 0.5s alternate infinite ease;
+  }
+
+  .shadow:nth-child(4) {
+    left: 45%;
+    animation-delay: 0.2s;
+  }
+  .shadow:nth-child(5) {
+    left: auto;
+    right: 15%;
+    animation-delay: 0.3s;
+  }
+  .wrapper span {
+    position: absolute;
+    top: 75px;
+    font-family: "Lato";
+    font-size: 20px;
+    letter-spacing: 12px;
+    color: #fff;
+    left: 15%;
+  }
+
+  .fade-out {
+    animation: fadeOut ease;
+    animation-duration: 0.5s;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+  }
 }
 
 @keyframes circle {
@@ -61,28 +115,6 @@
     top: 0%;
   }
 }
-.circle:nth-child(2) {
-  left: 45%;
-  animation-delay: 0.2s;
-}
-.circle:nth-child(3) {
-  left: auto;
-  right: 15%;
-  animation-delay: 0.3s;
-}
-.shadow {
-  width: 20px;
-  height: 4px;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 62px;
-  transform-origin: 50%;
-  z-index: -1;
-  left: 15%;
-  filter: blur(1px);
-  animation: shadow 0.5s alternate infinite ease;
-}
 
 @keyframes shadow {
   0% {
@@ -96,31 +128,6 @@
     transform: scaleX(0.2);
     opacity: 0.4;
   }
-}
-.shadow:nth-child(4) {
-  left: 45%;
-  animation-delay: 0.2s;
-}
-.shadow:nth-child(5) {
-  left: auto;
-  right: 15%;
-  animation-delay: 0.3s;
-}
-.wrapper span {
-  position: absolute;
-  top: 75px;
-  font-family: "Lato";
-  font-size: 20px;
-  letter-spacing: 12px;
-  color: #fff;
-  left: 15%;
-}
-
-.fade-out {
-  animation: fadeOut ease;
-  animation-duration: 0.5s;
-  animation-delay: 0s;
-  animation-fill-mode: forwards;
 }
 
 @keyframes fadeOut {
