--- a/src/app/view-record/view-record.component.scss
+++ b/src/app/view-record/view-record.component.scss
@@ -15,6 +15,11 @@
       i {
         margin: auto;
       }
+
+      .more-number {
+        margin: auto;
+        font-weight: bold;
+      }
     }
   }
 }
@@ -33,4 +38,8 @@
 
 .bg-info {
   border-color: var(--bs-info-text-emphasis) !important;
+}
+
+.bg-secondary {
+  border-color: var(--bs-secondary-text-emphasis) !important;
 }
