Multiline insert wip

--- a/src/app/daily-score/daily-score.component.html
+++ b/src/app/daily-score/daily-score.component.html
@@ -20,9 +20,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalLabel">
-          Insert new record
-        </h1>
+        <h1 class="modal-title fs-5" id="modalLabel">Insert new record</h1>
         <button
           type="button"
           class="btn-close"
@@ -39,10 +37,18 @@
         ></app-insert-record>
       </div>
       <div class="modal-footer">
-        <button id="close-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button
+          id="close-button"
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+        >
           Close
         </button>
-        <button (click)="insertRecord()" type="button" class="btn btn-primary">
+        <button *ngIf="localUserAttempts.length === 0" (click)="processText()" type="button" class="btn btn-primary">
+          Process
+        </button>
+        <button *ngIf="localUserAttempts.length > 0" (click)="insertRecord()" type="button" class="btn btn-primary">
           Save changes
         </button>
       </div>
