--- a/src/app/insert-record/insert-record.component.html
+++ b/src/app/insert-record/insert-record.component.html
@@ -1,20 +1,19 @@
 <ng-container *ngIf="!errorMessage; else errorMessageTemplate">
-  <div *ngIf="attempt.length === 0; else showAttempt" class="mb-3">
+  <div *ngIf="attempts.length === 0; else showAttempt" class="mb-3">
     <label for="recordInput" class="form-label">Paste new record!</label>
     <textarea
       [(ngModel)]="text"
-      (paste)="onPaste()"
       class="form-control"
       id="recordInput"
       rows="3"
     ></textarea>
   </div>
   <ng-template #showAttempt>
-    <div>
+    <div *ngFor="let attempt of attempts">
       <label class="form-label"
-        >{{ game?.name }} detected with {{ numberOfAttempts }} attempts</label
+        >{{ attempt.game.name }} detected with {{ attempt.numberOfAttempts }} attempts</label
       >
-      <app-view-record [attempt]="attempt"></app-view-record>
+      <app-view-record [attempt]="attempt.attempts"></app-view-record>
     </div>
   </ng-template>
 </ng-container>
